# rustgit-

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: fly-deploy.yml
.workspace-data/artifacts/: 5e1a3226e1aab365.json  61251e8aa8441bc9.json  ad5a9ca4d22f08b9.json  c6a1a50dc2c323.json
.workspace-data/artifacts/wasm/: serve.binding.json
.workspace-data/cache/repo-33e59f1f5d53b03b/: .alexignore  eslint.cli.config.mjs  pnpm-lock.yaml
.workspace-data/cache/repo-33e59f1f5d53b03b/.config/: eslintignore.mjs
.workspace-data/cache/repo-33e59f1f5d53b03b/bench/: BENCHMARKING.md
.workspace-data/cache/repo-33e59f1f5d53b03b/evals/: tsconfig.json
.workspace-data/cache/repo-33e59f1f5d53b03b/test/: .gitignore  cache-components-tests-manifest.json  deploy-tests-manifest.json  (+2 more)
ddockit-extension/: manifest.json
ddockit-extension/api/: ddockit-client.js
ddockit-extension/background/: service-worker.js
ddockit-extension/content/: github-overlay.js
ddockit-extension/popup/: popup.html  popup.js
ddockit-extension/sidepanel/: sidepanel.html
deploy/fly/: api.fly.toml  portal.fly.toml  workspaces.fly.toml
docs/: analyze-pipeline-traceability.md  execution-flow.generated.md  feature-maturity-registry.md  new_vue-healed4-evidence.md  runtime-model.generated.md  system-architecture.generated.md
docs/runtime/: analyze-capabilities.md  backlog.md  dead-runtime-code.md  docker-verification.md  execution-flow.md  provider-inventory.md  proxy-flow.md  runtime-capabilities.md  runtime-selection.md  wasm-verification.md
migrations/: 0001_baseline_schema.sql  0002_indexes_and_constraints.sql  0004_billing_metering.sql  0005_anonymous_execution_identity.sql  0006_repository_identity_and_healing_repairs.sql
portal/: Dockerfile  README.md  next.config.mjs  package-lock.json  package.json
portal/src/app/: page.module.css  page.tsx
src/: architecture_docs.rs  badge.rs  lib.rs  postgres_db.rs  tests.rs
src/analyze/: analyzer.rs  blueprint_builder.rs  cache.rs  manifest_builder.rs  mod.rs  runtime_detector.rs
src/healing/: classifier.rs  confidence.rs  coordinator.rs  learner.rs  mod.rs  orchestrator.rs  planner.rs  rollback.rs  root_cause.rs  timeline.rs  verifier.rs
src/preparation/: capability_discovery.rs  configuration_discovery.rs  dependency_discovery.rs  environment_discovery.rs  execution_spec_builder.rs  mod.rs  repository_discovery.rs  runtime_discovery.rs  service_discovery.rs  synthesis_engine.rs  validation_engine.rs
tests/: postgres_persistence.rs
tests/golden_repos/: catalog.yaml
tools/: analyze_architecture.rs  extract_execution_graph.rs  generate_docs.rs
(+932 files in other folders)
