[package]
name = "rustgit_wasm_runtime"
version = "0.1.0"
edition = "2021"
description = "Gitpod-compatible WASM workspace runtime foundation"
license = "MIT"

[lib]
name = "rustgit_wasm_runtime"
path = "src/lib.rs"

[[bin]]
name = "wasm-workspace-cli"
path = "src/bin/wasm_workspace_cli.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "analyze-architecture"
path = "tools/analyze_architecture.rs"

[[bin]]
name = "extract-execution-graph"
path = "tools/extract_execution_graph.rs"

[[bin]]
name = "generate-docs"
path = "tools/generate_docs.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
postgres = { version = "0.19.14", features = ["with-serde_json-1"] }
r2d2 = "0.8.10"
r2d2_postgres = "0.18.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24.0", features = ["rustls-tls-webpki-roots"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
wasmtime = { version = "45.0.2", default-features = false, features = ["cranelift", "runtime", "std"] }
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
wat = "1.252.0"
tower = "0.5"
